--- a/main.css
+++ b/main.css
@@ -73,6 +73,14 @@ jgs  |   |  '------' | |
 
 */
 
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777777;
+    background: url("./assets/images/concrete_seamless.png");
+}
+
 .main-section {
     float: left;
     width: 100%;
