--- a/main.css
+++ b/main.css
@@ -144,7 +144,7 @@ h3 {
     color: #ffffff;
     color: #cccccc;
     text-align: center;
-    background: #666666;
+    background: white;
     border-top: 8px solid #4aaaa5;
     height: 50px;
 }
